# sarge

./: meson.build
data/: gschema.xml  meson.build  sarge.appdata.xml.in  sarge.desktop.in
data/resources/: meson.build  resources.xml  style.css
meson/: post_install.py
po/: POTFILES  com.github.stbsoft.sarge.pot  hu.po  meson.build
src/: SargeApp.vala  meson.build
src/Components/: DriveButton.vala  FileItem.vala  PanelBox.vala  PanelGrid.vala
